--- a/Aurora/localizaciones/frmEditarLocalizacion.resx
+++ b/Aurora/localizaciones/frmEditarLocalizacion.resx
@@ -117,6 +117,77 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ctMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>108, 17</value>
+  </metadata>
+  <metadata name="imgList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imgList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB+
+        DQAAAk1TRnQBSQFMAgEBBgEAATgBAAE4AQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEACP8B9Af/MAAB7Azr
+        AewB/wIAAbwBtQvPAbwhAAHsAesLbQHsAv8BAAG0AfMB9AH/CfQBzyEAAbwM8wG8Af8CAAGLAfQKGQHz
+        Ac8hAAEHAfMCFAHzAhQB8gEHAfICFAHyAQcB/wIAAYsB9AGLCJEBiwHzAc8hAAG8B/MB8gTzAQcC/wEA
+        AYsB9AGRCLQBkQHzAc8hAA68AewBvAEAAYsB9AGRCLQBkQHzAc8hAAH/AfAEvAYHAe8D7AEAAYsB9AGu
+        CLQBrgHzAc8iAAP/AQAB/wHtAfcC1AHbA9QB7wHtAQABiwH0AZECCQa7AZEB8wHPJgAB/wHtAe8G1ALt
+        AQABiwH0AfcICQH3AfMBzyYAAf8B7QEHAtQD2wHVAQcBkgEAAYsB9AG1CBkBtQHzAc8jAAH/AgAB/wHt
+        AQcB2wXcAQcB7QEAAYsB9AH3BQkDGQG1AfQBzyEAAf8BAAH/AgAB/wHtAQcI7QEAAa4B9ASRA7QCtQGR
+        AfQBzyEAAf8EAAH/Ae0CBwHNAdwBKwJ6ATIB7AEAAbQB8Qv0Ac8mAAH/Ae8C7QLNAisCMgGSAQABvAG0
+        Aa4JiwGuAbwmAAv/QgAB/wHvAuwC6wGSCgAKtBgAAfMBkgLrA20B7AUAAf8B7QHwAfIC8QHsBwABBwHs
+        AeoBtAH/A/QD8wH/AbQBEAFtAQcTAAHzAe8B9wEHAfADvAHzAW0GAAHxAe8BBwG8AewBBwGSAusDbQHs
+        AW0B9wHvAewB7wYHAe8BEQHvAZIBEAHyA7wG8QLyAfABvAH0AwABBwHvAfAB8QEHBO8BvAFtAwAB8QIH
+        Ae8B9wKSBOwB9wK8AfMBbQHrAu8B7QPsAm0BEgIUAW0C7wEQAfcBFQFmAW0G9wTvAfIB/wIAAfcB9AHy
+        AfAF7wG8AW0DAAHvAfIC8Aa8AfAB6wLvAbwBbQHrAgcB7AHwBgcB8AHsAgcBEQGSARUBbAFtBOwD7QHv
+        AvcBBwHyAgAB7wHzAfEB8AEHBO8BvAHrAwAB7wHxCIsB8AHsAu8BvAFtAewC8AHtAfEGBwHwAewC8AEV
+        AfcBFQEUAeoKkgIHAgAB7wHzAfEB8AMHAk8B8AHsAwABBwHxArQEtQG0AYsB8AHsAu8BvAHrAewC/wHv
+        AfEGvAHxAfcC/wFtAfQB7AESC20B7AEHAgAB7wHzAvEDBwGYAXIB8AHsAwABBwHxAc8GtAGLAfAB7AJP
+        AfAC7AL/AbwI9AEHAv8B6wEAAfQB7AFtCesBbQHrAfACAAEHAfMC8QUHAfAB7AMAAQcB8QHPBrQBiwHw
+        AewBmAFyAfAB7AH3AfAB8wrsAfMBBwHsDQAB7AH/AwABBwHzAfIB8QEHAe0D7AHwAewDAAG8AfEBzwa0
+        AYsB8AHtAgcB8AHsAfMBkgG8AbMB9AYZAfQBswEHAesB8w0AAe0B/wMAAQcB8wHyAfECvAMHAfAB7QMA
+        AbwB8QbPAbQBiwHwAZIC7AHwAewBAAHyAewBswH0BhkB9AGzAW0B8Q4AAZIB/wMAAbwC8wHyAbwE7QHw
+        AZIDAAHwAfQI8QHzAZICBwHwAe0CAAH/AbQB/wQZAd0BCQH/AbMB/w8AAZIB/wMAAfQB8AHxAfMEvAEH
+        AfEBkgMAA/ACvAMHA+8B9wLtAfABkgMAAbQB/wQZAfMC9AGzEAABkgH/BAAB/wLxAfIE8QHzAfcIAAH0
+        AfAB8QHzBLwBBwHxAZIDAAG0Af8EGQH/ARkBuwEJEAAB7wH/BgAB8gG8AwcC7wHwCQAB/wLxAfIE8QHz
+        AfcDAAG0BfQBGQG6AbQB/xAAAQcaAAHyAbwDBwLvAfADAAHyAbsBtAGzArQBswEJEgAB9AIAAUIBTQE+
+        BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/8DAAL/BQABAQGAAQEGAAGAAQEFAAEBAYABAQUA
+        AQEBgAEBBgABgAEBBgABgAEBBgABgAEBBAABiAEAAYABAQQAAfgBAAGAAQEEAAH4AQABgAEBBAAB2AEA
+        AYABAQQAAVgBAAGAAQEEAAF4AQABgAEBBAAB+AEAAYABAQQAAfgBAAL/BAAC/wHAAX8B4AEHAv8B+AEH
+        AcABfwIAAv8B4AEHAeAEAAEBAcABBwYAAcABBwYAAcABBwYAAcABBwYAAcABBwQAAYABAAHAAQcEAAH/
+        AfkBwAEHBAAB/wH5AcABBwIAAYABAQH/AfkBwAEHAgABwAEDAf8B+QHAAQcCAAHgAQcB/wH5AeABBwH4
+        AQAB4AEHAf8B+QH4AQcB/AEAAeABBwH/AfsD/wEAAeABHwH/AfsL
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
